force-app/main/default/objects/Flight_Detail__c/Flight_Detail__c.object-meta.xml
<CustomObject>
    <label>Flight Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Flight Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>