force-app/main/default/objects/Flight_Detail__c/fields/Airline_Id__c.field-meta.xml
<CustomField>
    <fullName>Airline_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Id</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Flight Details</relationshipLabel>
    <relationshipName>Flight_Details</relationshipName>
    <type>Lookup</type>
</CustomField>