force-app/main/default/objects/Flight_Detail__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipName>Flight_Details</relationshipName>
    <type>Lookup</type>
</CustomField>