force-app/main/default/objects/Flight_Detail__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipName>Flight_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>