force-app/main/default/objects/Flight_Detail__c/fields/Flight_Name__c.field-meta.xml
<CustomField>
    <fullName>Flight_Name__c</fullName>
    <formula>Airline_Id__r.Airline_Code__c &amp; &quot;-/&quot; &amp; IF( NOT(ISBLANK(UPPER(Flight_No_Arrival__c))), Flight_No_Arrival__c, IF(NOT(ISBLANK(UPPER(Flight_No_Departure__c))) , Flight_No_Departure__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Name</label>
    <type>Text</type>
</CustomField>