force-app/main/default/objects/Flight_Detail__c/fields/Flight_No_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Flight_No_Arrival__c</fullName>
    <label>Flight No Arrival</label>
    <length>15</length>
    <type>Text</type>
</CustomField>