force-app/main/default/objects/Flight_Detail__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>